--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -2,7 +2,7 @@ name: Deploy to QA
 
 on:
   workflow_run:
-    workflows: ["CI Pipeline"]
+    workflows: ["Deploy to DEV"]
     types:
       - completed
 
