--- a/.github/workflows/deploy-sit.yml
+++ b/.github/workflows/deploy-sit.yml
@@ -2,7 +2,7 @@ name: Deploy to SIT
 
 on:
   workflow_run:
-    workflows: ["CI Pipeline"]
+    workflows: ["Deploy to QA"]
     types:
       - completed
 
