updated approval workflow

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -17,6 +17,10 @@ jobs:
 
     - name: Deployment step
       run: echo "Deploying to dev..."
-    
+  Promote_QA:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    runs-on: ubuntu-latest
+    environment: dev
+    steps:
     - name: Promote to QA
       run: echo "Promoting to QA..."
