--- a/.github/workflows/deploy-qa.yml
+++ b/.github/workflows/deploy-qa.yml
@@ -18,5 +18,10 @@ jobs:
     - name: Deployment step
       run: echo "Deploying to qa..."
     
-    - name: Promote to QA
+  Promote_SIT:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    runs-on: ubuntu-latest
+    environment: qa
+    steps:
+    - name: Promote to SIT
       run: echo "Promoting to SIT..."
