--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,6 +1,10 @@
 name: Deploy to DEV
 
 on:
+  pull_request:
+    types: [closed]
+    branches:
+      - main
   workflow_run:
     workflows: ["CI Pipeline"]
     types:
@@ -10,7 +14,6 @@ jobs:
   deploy:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
-    environment: dev
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -18,7 +21,7 @@ jobs:
     - name: Deployment step
       run: echo "Deploying to dev..."
   Promote_QA:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    needs: deploy
     runs-on: ubuntu-latest
     environment: dev
     steps:
