Feature/test approval (#9)
* updated approval workflow

* Merge pull request #1 from areshdeepuk/feature/test-approval (#2)

* updated approval workflow

* updated approval workflow

* updated approval workflow

* updated approval workflow

* updated approval workflow

* updated approval workflow

* updated approval workflow

* updated approval workflow

* updated approval workflow

* updated approval workflow

---------

Co-authored-by: Areshdeep Singh <areshdeepsingh@Areshdeeps-MacBook-Pro.local>

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -9,10 +9,13 @@ on:
     workflows: ["CI Pipeline"]
     types:
       - completed
+    branches:
+      - main
+    
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' }} && ${{ github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
