--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -5,17 +5,11 @@ on:
     types: [closed]
     branches:
       - main
-  workflow_run:
-    workflows: ["CI Pipeline"]
-    types:
-      - completed
-    branches:
-      - main
     
 
 jobs:
   deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }} && ${{ github.event.pull_request.merged == true }}
+    if: ${{ github.event.pull_request.merged == true }}
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
